--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,18 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.6.21'
     id 'org.jetbrains.kotlin.plugin.jpa' version '1.6.21'
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.6.21"
 }
 
 group = 'com.group'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+allOpen {
+    annotation("javax.persistence.Entity")
+    annotation("javax.persistence.MappedSuperclass")
+    annotation("javax.persistence.Embeddable")
+}
 
 repositories {
     mavenCentral()
